--- a/hosted/style.css
+++ b/hosted/style.css
@@ -255,6 +255,14 @@ h3.domoAge {
     padding-right: 40px;
     font-size: 1.5em;
 }
+h3.domoLevel {
+    float:right;
+    text-align: left;
+    width: 100px;
+    font-weight: bold;
+    padding-right: 40px;
+    font-size: 1.5em;
+}
 
 .domo:first-child {
     margin-top: 10px;
